--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp",
+        "iostream": "cpp"
     }
 }
