added EEPROM support

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,6 +2,7 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+board_build.partitions = min_spiffs.csv
 lib_deps = 
     SPI
     Wire
