--- a/lib/env/env.h.example
+++ b/lib/env/env.h.example
@@ -2,3 +2,7 @@
 #define WIFI_PASSWORD "YourWifiPassword"
 #define AGNS_NODES "90:B4:54:F5:99:42,92:B5:11:F4:99:33"
 #define NUM_OF_AGNS_NODES 2
+#define NTP_POOL "pool.ntp.org"
+#define NTP_TZ_OFFSET_S 7200
+#define NTP_DAYLIGHT_OFFSET_S 3600
+#define EEPROM_SIZE 512
