--- a/platformio.ini
+++ b/platformio.ini
@@ -8,5 +8,5 @@ lib_deps =
     Wire
     Adafruit GFX Library
     Adafruit SSD1306
-    NTPClient
     ottowinter/ESPAsyncWebServer-esphome
+    bblanchon/ArduinoJson
