complete API, implemented irrigation_timer

--- a/lib/env/env.h.example
+++ b/lib/env/env.h.example
@@ -6,3 +6,5 @@
 #define NTP_TZ_OFFSET_S 7200
 #define NTP_DAYLIGHT_OFFSET_S 3600
 #define EEPROM_SIZE 512
+#define RESET_EEPROM_ON_STARTUP false
+#define SCHEDULE_SEPARATOR ";"
