fixed EEPROM buffers

--- a/lib/env/env.h.example
+++ b/lib/env/env.h.example
@@ -8,3 +8,4 @@
 #define EEPROM_SIZE 512
 #define RESET_EEPROM_ON_STARTUP false
 #define SCHEDULE_SEPARATOR ";"
+#define BACKUP_FILE_PATH "/backup.txt"
